--- a/pages/daily_task/daily_task.wxml
+++ b/pages/daily_task/daily_task.wxml
@@ -1,18 +1,6 @@
 <!-- pages/daily_task/daily_task.wxml -->
 <!-- height: {{windowHeight}}px -->
 <view class='container' style=''>
-  <!-- header -->
-  <!-- <view class='user-infos'>
-    <button class="openbtn" wx:if='{{authLevel != 2}}' open-type="getUserInfo" bindgetuserinfo="onGotUserInfo"></button>
-    <image class='header_img' src='{{userInfo && userInfo.avatarUrl? userInfo.avatarUrl:"/images/nologinuser.png"}}'></image>
-    <view class='infos-detail'>
-      <text class='user-name'>{{userInfo.nickName? userInfo.nickName:"点击头像立即登录" }}</text>
-      <view class='row'>
-        <image class="sm_icon" src='/images/bookMark_active.png'></image>
-        <text class='infos-desc'>已有<text class="num">{{gold}}</text>张书签</text>
-      </view>
-    </view>
-  </view> -->
   <!-- headbcg -->
   <view class="head-bcg"></view>
   <view class="head-wrap">
@@ -22,7 +10,7 @@
         <text class="right-cart" style="color: #3772FB" bindtap="toShopMall">去兑换></text>
       </view>
       <view class="sign-list">
-        <view class="sign-item" wx:for="{{signInfo}}">
+        <view class="sign-item" wx:for="{{signInfo}}" wx:key="index">
           <view class="img-wrap">
             <image class="img {{item.issign == 1?'active':''}}" src="{{item.issign == 1?'../../images/gou.png':''}}"></image>
             <text class="img-text">{{item.issign == 1?'':item.number}}</text>
@@ -43,12 +31,33 @@
   <view class="wrap" wx:if="{{onceTasks.length}}">
     <view class="card-wrap">
       <block wx:for="{{onceTasks}}" wx:key="index">
-        <view class="cell-wrap">
+        <view class="cell-wrap" hidden="{{item[10] == 1}}">
           <view>
-            <text class="cell-title">每日听书5分钟</text>
-            <text class="cell-num">+4书签</text>
+            <!-- <text class="cell-title"></text>
+            <text class="cell-num">+4书签</text> -->
+            <text class="cell-title">{{item[2]}}{{item[13]?item[13]:''}}</text>
+            <text class=''>({{item[4]}}/{{item[3]}})</text>
+            <text class="cell-num">+{{item[8] * item[3]}}书签</text>
           </view>
-          <view class="btn blue-color cell-btn">去书城</view>
+          <!-- <view class="btn blue-color cell-btn" bindtap="toShopMall">去书城</view> -->
+          <view class="btn blue-color cell-btn" wx:if="{{item[1] == 1 && item[4] < item[3]}}" bindtap="toRead">
+            去阅读
+          </view>
+          <view class='btn active cell-btn' bindtap='' wx:if="{{item[1] == 3 && item[4] < item[3]}}">
+            邀请
+            <button open-type="share" id="item-invite" data-id="{{item[0]}}" class='share-btn'></button>
+          </view>
+          <view class='btn active cell-btn' data-id="{{item[0]}}" bindtap='toShareDetail' wx:if="{{item[1] == 4 && item[4] < item[3]}}">
+            分享
+            <!-- <button open-type="share" id="item-share" data-id="{{item[0]}}" class='share-btn'></button> -->
+          </view>
+          <view class="btn blue-color cell-btn" bindtap="toShopMall" wx:if="{{item[1] == 5 && item[4] < item[3]}}">
+            去书城
+          </view>
+          <view class='btn active cell-btn' data-taskId="{{item[0]}}" data-award="{{item[8] || item[9]}}" wx:if="{{item[10] == 0 && item[4] >= item[3]}}" bindtap='onReceive'>
+            领取
+          </view>
+          <!-- <view class='btn disabled cell-btn' wx:if="{{item[10] == 1}}">已领取</view> -->
         </view>
       </block>
       <!-- <view class="cell-wrap">
@@ -73,11 +82,49 @@
         <view class="cell-wrap">
           <view>
             <text class="cell-title">{{item[2]}}</text>
-            <text class="cell-num">+{{item[8]}}书签</text>
+            <text class=''>({{item[4]}}/{{item[3]}})</text>
+            <text class="cell-num">+{{item[8] * item[3]}}书签</text>
           </view>
-          <view class="btn blue-color cell-btn" wx:if="{{item[1] == 1}}" bindtap="toRead">去阅读</view>
-          <view class="btn blue-color cell-btn" wx:if="{{item[1] == 3}}">邀请</view>
-          <view class="btn blue-color cell-btn" wx:if="{{item[1] == 5}}">去书城</view>
+          <view class="btn blue-color cell-btn" wx:if="{{item[1] == 1 && item[4] < item[3]}}" bindtap="toRead">
+            去阅读
+          </view>
+          <view class='btn active cell-btn' bindtap='' wx:if="{{item[1] == 3 && item[4] < item[3]}}">
+            邀请
+            <button open-type="share" id="item-invite" data-id="{{item[0]}}" class='share-btn'></button>
+          </view>
+          <view class='btn active cell-btn' data-id="{{item[0]}}" bindtap='toShareDetail' wx:if="{{item[1] == 4 && item[4] < item[3]}}">
+            分享
+            <!-- <button open-type="share" id="item-share" data-id="{{item[0]}}" class='share-btn'></button> -->
+          </view>
+          <view class="btn blue-color cell-btn" bindtap="toShopMall" wx:if="{{item[1] == 5 && item[4] < item[3]}}">
+            去书城
+          </view>
+          <view class='btn active cell-btn' data-taskId="{{item[0]}}" data-award="{{item[8] || item[9]}}" wx:if="{{item[10] == 0 && item[4] >= item[3]}}" bindtap="onReceive">
+            <!-- <form class="" bindsubmit="onReceive" data-taskId="{{item[0]}}" data-award="{{item[8] || item[9]}}" report-submit="true"> -->
+            <!-- form-type="submit" -->
+            <!-- <button class='subtn' bindtap="onReceive">领取</button> -->
+            领取
+            <!-- </form> -->
+          </view>
+          <view class='btn disabled cell-btn' wx:if="{{item[10] == 1}}">已领取</view>
+        </view>
+      </view>
+    </view>
+  </block>
+  <!-- 奖励规则 -->
+  <block wx:for="{{rewardList}}" wx:for-index="index" wx:key="index">
+    <view class="wrap">
+      <view class="card-wrap">
+        <view class="cell-wrap">
+          <view>
+            <text class="cell-title">{{item[1]}}</text>
+            <text class=''>({{item[5]}}/{{item[4]}})</text>
+            <text class="cell-num">+{{item[2] * item[4]}}书签</text>
+          </view>
+          <view class="btn blue-color cell-btn" wx:if="{{ item[5] < item[4] }}" bindtap="toRead">
+            去阅读
+          </view>
+          <view class='btn disabled cell-btn' wx:if="{{item[5] >= item[4]}}">已领取</view>
         </view>
       </view>
     </view>
