--- a/pages/daily_task/daily_task.wxss
+++ b/pages/daily_task/daily_task.wxss
@@ -163,6 +163,7 @@ page {
 
 .cell-num {
     color: #3971fb;
+    margin-left: 10rpx;
 }
 
 .cell-btn {
@@ -171,4 +172,12 @@ page {
     line-height: 60rpx;
     width: 130rpx;
     font-size: 26rpx;
+    position: relative
+}
+
+.share-btn {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0
 }
